--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <!-- choose one -->
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <link rel="stylesheet" href="landing.css">
 </head>
 <body>
@@ -39,7 +42,13 @@
     </section>
 
     <footer>
+        <i data-feather="instagram"></i>
+        <i data-feather="github"></i>
+        <i data-feather="facebook"></i>
         <p>&copy; 2025 Sua Empresa. Todos os direitos reservados.</p>
     </footer>
+    <script>
+        feather.replace();
+    </script>
 </body>
 </html>
