--- a/index.html
+++ b/index.html
@@ -1,54 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <!-- choose one -->
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-    <link rel="stylesheet" href="landing.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TechSolvers - Soluções em Tecnologia</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#secao1">Home</a></li>
-                <li><a href="#secao2">Serviços</a></li>
-                <li><a href="#secao3">Sobre nós</a></li>
-                <li><a href="#secao4">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section id="secao1">
-        <h1>Bem-vindo à nossa landing page!</h1>
-        <p>Descrição introdutória sobre o objetivo da página.</p>
-    </section>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="#">Tech IFPR Cascavel</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon bg-light rounded"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#servicos">Serviços</a></li>
+          <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+    
 
-    <section id="secao2">
-        <h2>Nossos Serviços</h2>
-        <p>Informações sobre os serviços que oferecemos.</p>
-    </section>
-
-    <section id="secao3">
-        <h2>Sobre Nós</h2>
-        <p>Detalhes sobre a empresa ou o projeto.</p>
-    </section>
-
-    <section id="secao4">
-        <h2>Contato</h2>
-        <p>Informações de contato e formulário.</p>
-    </section>
-
-    <footer>
-        <i data-feather="instagram"></i>
-        <i data-feather="github"></i>
-        <i data-feather="facebook"></i>
-        <p>&copy; 2025 Sua Empresa. Todos os direitos reservados.</p>
-    </footer>
-    <script>
-        feather.replace();
-    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
