--- a/index.html
+++ b/index.html
@@ -26,6 +26,41 @@
       </div>
     </div>
   </nav>
+  <!-- Hero -->
+  <section class="hero text-center">
+    <div class="container">
+      <h1 class="display-4">Tecnologia que transforma negócios</h1>
+      <p class="lead">Desenvolvemos soluções digitais para impulsionar sua empresa no mundo conectado.</p>
+      <a href="#contato" class="btn btn-light btn-lg mt-3">Fale com a gente</a>
+    </div>
+  </section>
+
+  <!-- Serviços -->
+  <section id="servicos" class="py-5">
+    <div class="container">
+      <h2 class="text-center section-title">Nossos Serviços</h2>
+      <div class="row text-center">
+        <div class="col-md-4 mb-4">
+          <div class="card p-4 shadow">
+            <h5>Apps e Sites Responsivos</h5>
+            <p>Criação de plataformas com performance e usabilidade modernas.</p>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card p-4 shadow">
+            <h5>Infraestrutura em Nuvem</h5>
+            <p>Servidores escaláveis e seguros com monitoramento contínuo.</p>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card p-4 shadow">
+            <h5>Consultoria de TI</h5>
+            <p>Diagnóstico, planejamento e automação de processos empresariais.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
     
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
