--- a/index.html
+++ b/index.html
@@ -61,7 +61,120 @@
       </div>
     </div>
   </section>
-    
+  <!-- Blog -->
+  <section id="blog" class="bg-light py-5">
+    <div class="container">
+      <h2 class="text-center section-title">Últimos Artigos do Blog</h2>
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Tendências Tech 2025</h5>
+              <p class="card-text">Conheça as tecnologias emergentes que vão revolucionar o mercado nos próximos anos.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ler mais</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Segurança Digital</h5>
+              <p class="card-text">Como proteger seus dados e sua empresa contra ataques cibernéticos.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ler mais</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Transformação Digital</h5>
+              <p class="card-text">Saiba como iniciar a digitalização do seu negócio de forma eficiente.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm">Ler mais</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQ -->
+  <section id="faq" class="py-5">
+    <div class="container">
+      <h2 class="text-center section-title">Perguntas Frequentes</h2>
+      <div class="accordion" id="faqAccordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faq1">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
+              Quanto tempo leva para desenvolver um site?
+            </button>
+          </h2>
+          <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Depende da complexidade. Um site básico pode levar de 1 a 2 semanas. Projetos maiores exigem mais tempo.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faq2">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+              Vocês oferecem suporte contínuo?
+            </button>
+          </h2>
+          <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Sim! Oferecemos planos de manutenção e suporte técnico após o lançamento.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faq3">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
+              Posso contratar apenas a consultoria?
+            </button>
+          </h2>
+          <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Claro. Temos pacotes exclusivos de consultoria estratégica e análise de TI.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contato -->
+  <section id="contato" class="py-5 bg-light">
+    <div class="container">
+      <h2 class="text-center section-title">Fale com a TechSolvers</h2>
+      <form>
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <label for="nome" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="nome" required>
+          </div>
+          <div class="col-md-6 mb-3">
+            <label for="email" class="form-label">E-mail</label>
+            <input type="email" class="form-control" id="email" required>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="mensagem" class="form-label">Mensagem</label>
+          <textarea class="form-control" id="mensagem" rows="4" required></textarea>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center py-4">
+    <div class="container">
+      <p class="mb-0">&copy; 2025 TechSolvers. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
